--- a/index.css
+++ b/index.css
@@ -134,7 +134,7 @@ ul {
     article{
         margin-top: 30px;
         margin-left: 10px;
-        width: 400px;
+        width: 350px;
         text-align: justify;
     }
 }
@@ -142,5 +142,11 @@ ul {
 @media(max-width: 574px) {
     .footer-col {
         width: 100%;
+    }
+    article{
+        margin-top: 30px;
+        margin-left: 10px;
+        width: 350px;
+        text-align: justify;
     }
 }
