--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@
 
 
 .navbar-expand-lg a{
+
+    font-family: 'Lora', serif;
+    font-weight: 700 italic;
     color: #ffffff;
 }
 
@@ -134,7 +137,7 @@ ul {
     article{
         margin-top: 30px;
         margin-left: 10px;
-        width: 350px;
+        width: 300px;
         text-align: justify;
     }
 }
@@ -146,7 +149,7 @@ ul {
     article{
         margin-top: 30px;
         margin-left: 10px;
-        width: 350px;
+        width: 300px;
         text-align: justify;
     }
 }
