--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 
+
+
 .navbar-expand-lg{
     background-color: #24262b;
     opacity: 60%;
@@ -9,8 +11,8 @@
 
 .navbar-expand-lg a{
 
-    font-family: 'Lora', serif;
-    font-weight: 700 italic;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400 bold;
     color: #ffffff;
 }
 
